--- a/spm/cactus/cactus-secondary.dts
+++ b/spm/cactus/cactus-secondary.dts
@@ -35,28 +35,44 @@
 
 	rx_tx-info {
 		compatible = "arm,ffa-manifest-rx_tx-buffer";
-
-		description = "NS RX/TX Buffer";
-		pages-count = <1>;
-		attributes = <0x0>;
-		base-address = <0x7200000>;
+		rx-buffer = <&rxbuffer>;
+		tx-buffer = <&txbuffer>;
 	};
 
 	memory-regions {
 		compatible = "arm,ffa-manifest-memory-regions";
+
+		rxbuffer: rx-buffer {
+			description = "rx-buffer";
+			pages-count = <1>;
+			base-address = <0x00000000 0x7202000>;
+			attributes = <0x1>; /* read-only */
+		};
+
+		txbuffer: tx-buffer {
+			description = "tx-buffer";
+			pages-count = <1>;
+			base-address = <0x00000000 0x7203000>;
+			attributes = <0x3>; /* read-write */
+		};
+
+		/* Without optional base-address */
 		test-memory {
-			description = "Test Memory";
-			pages-count = <32>; /* 128KiB with 4KiB pages */
-			base-address = <0x00000000 0x21000000>;
-			attributes = <0x0>;
+			description = "test-memory";
+			pages-count = <4>;
+			attributes = <0x7>; /* read-write-execute */
 		};
 	};
 
 	device-regions {
 		compatible = "arm,ffa-manifest-device-regions";
-		attributes = <0x0>;
+
 		test-reg {
-			reg = <0x10000008 0x00000001 1>; /* Arbitrary test address */
+			/* Dummy values */
+			base-address = <0x00000000 0x24000000>;
+			pages-count = <16>;
+			attributes = <0x3>; /* read-write */
+			reg = <0x10000008 0x00000001 1>;
 			smmu-id = <1>;
 			stream-ids = <0x0 0x1>;
 			interrupts = <0x2 0x3>,
